# filetailor

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: flowchart.xcf
docs/demo/: README.md  demo.cast  demo.sh
docs/wiki/: file_imports.md  overview.md  sync.md
filetailor/: __main__.py  config.py
filetailor/core/: clean.py  initialize.py  paths.py  sync.py  uninstall.py  update_yaml.py
filetailor/data/: config.ini  example_filetailor.yaml  filetailor.yaml
filetailor/helpers/: cprint.py  diff.py  get_key_list.py  get_option.py  load_ini_files.py  load_yaml.py  okay_to_continue.py  tailor_lines.py
tests/: test.py  test_instructions.md  test_load_yaml.py
tests/files/: file1.txt
tests/files/dir1/: different.txt
tests/sync/: file1.txt
tests/sync/dir1/: different.txt
tests/yaml/: filetailor.yaml  test_yaml_2.yaml
