[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filetailor"
version = "0.2.1"
requires-python = ">=3.6"
dependencies = [
    "appdirs>=1.4.4",
    "pyyaml>=5.4.1",
    "ruamel.yaml>=0.17.7",
    "termcolor>=1.1.0",
]
authors = [
    { name = "Kyle Johnston", email = "johnstonkylew@gmail.com" }
]
description = "Copy and modify plain text files to a folder based on YAML to be synced between devices"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENCSE"]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration"
]

[project.urls]
Homepage = "https://github.com/k4j8/filetailor"
Issues = "https://github.com/k4j8/filetailor/issues"

[project.scripts]
filetailor = "filetailor.__main__:main"
