[metadata]
name = filetailor
version = 0.0.6
author = Kyle Johnston
author_email = johnstonkylew@gmail.com
description = Copy and modify plain text files to a folder based on YAML to be synced between devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/k4j8/filetailor
project_urls =
    Bug Tracker = https://github.com/k4j8/filetailor/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    appdirs>=1.4.4
    pyyaml>=5.4.1
    ruamel.yaml>=0.17.7
    termcolor>=1.1.0

[options.entry_points]
console_scripts =
    filetailor = filetailor.__main__:main
